<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".payments.FragmentPayments">

        <TextView
            android:id="@+id/paymentsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:text="@string/welcome_to_payments_screen"
            android:textColor="@android:color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/toContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paymentsTitle"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneET"
                android:hint="@string/to"
                android:inputType="phone"
                android:text="@string/_1_999_999999" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toContact"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/amountET"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:text="@string/_1000" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendAmountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amountTxtLayout"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/send_amount"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>
</layout>