<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".configurations.FragmentConfigurations">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuration"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serverUrlTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serverUrlTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wups_server_url"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customerIDTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/serverUrlTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerIDTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_id"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeoutInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/customerIDTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeoutTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/timeout_value_in_seconds"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sdServerUrlInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeoutInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sdServerUrlTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sd_server_url"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/savingChangesNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveBtn"
            android:layout_marginTop="30dp"
            android:background="#E0E0E0"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/saving_will_restart_the_app_and_load_nthe_configuration_changes" />

        </LinearLayout>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</layout>
