<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.FragmentLogin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ViewSwitcher
                android:id="@+id/viewSwitcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/biocatch_logo" />

                    <TextView
                        android:id="@+id/welcomeTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/biobank_login"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/login"
                        android:textColor="@android:color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="#E0E0E0"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="bottom"
                            android:text="@string/biocatch_sdk"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="bottom|center_horizontal"
                            android:text="@string/sdk_description_login_page"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/configurationBtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Version" />

                    <TextView
                        android:id="@+id/sdkVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="SDK Version" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:indeterminate="true" />

                    <TextView
                        android:id="@+id/information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/simulation_string"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </ViewSwitcher>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
